[gd_scene load_steps=18 format=3 uid="uid://bfr86eqfd7d8o"]

[ext_resource type="Script" uid="uid://bd046eokvcnu2" path="res://addons/phantom_camera/scripts/phantom_camera_host/phantom_camera_host.gd" id="1_0d5ky"]
[ext_resource type="Script" uid="uid://dha80psfiixdv" path="res://LivingRoomStart.gd" id="1_3wf2c"]
[ext_resource type="Script" uid="uid://csjccrhj5wnx7" path="res://addons/phantom_camera/scripts/phantom_camera/phantom_camera_3d.gd" id="2_7htnq"]
[ext_resource type="Script" uid="uid://8umksf8e80fw" path="res://addons/phantom_camera/scripts/resources/tween_resource.gd" id="3_3wf2c"]
[ext_resource type="PackedScene" uid="uid://de4ulsjohof47" path="res://Models/StartTV.tscn" id="4_7htnq"]
[ext_resource type="Texture2D" uid="uid://dlokxmvww06sw" path="res://empty_play_room_4k.exr" id="7_rd8cm"]
[ext_resource type="AudioStream" uid="uid://md6bjltsksth" path="res://Audio/TV_on_01.wav" id="8_8bi5o"]
[ext_resource type="PackedScene" uid="uid://raw5lxxi11ie" path="res://Credits.tscn" id="9_627k2"]
[ext_resource type="Texture2D" uid="uid://da1q6pcln4ss2" path="res://Grimy_Wall.jpg" id="10_ht3pi"]
[ext_resource type="PackedScene" uid="uid://d2yk0mbdfb0bj" path="res://Table.fbx" id="11_ms31j"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_8bi5o"]
panorama = ExtResource("7_rd8cm")

[sub_resource type="Sky" id="Sky_627k2"]
sky_material = SubResource("PanoramaSkyMaterial_8bi5o")

[sub_resource type="Environment" id="Environment_ht3pi"]
background_mode = 2
sky = SubResource("Sky_627k2")

[sub_resource type="Resource" id="Resource_lo4tm"]
script = ExtResource("3_3wf2c")

[sub_resource type="BoxShape3D" id="BoxShape3D_3wf2c"]
size = Vector3(5.328575, 4.1280212, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ms31j"]
albedo_texture = ExtResource("10_ht3pi")

[sub_resource type="PlaneMesh" id="PlaneMesh_627k2"]
material = SubResource("StandardMaterial3D_ms31j")

[node name="Node3D" type="Node3D" node_paths=PackedStringArray("CamTarget")]
script = ExtResource("1_3wf2c")
CamTarget = NodePath("StartGameTarget")
time_in_seconds = 1

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_ht3pi")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.1877506, 1.1188631)

[node name="PhantomCameraHost" type="Node" parent="Camera3D"]
process_priority = 300
process_physics_priority = 300
script = ExtResource("1_0d5ky")

[node name="PhantomCamera3D" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.1877506, 1.1188631)
script = ExtResource("2_7htnq")
priority = 1
tween_resource = SubResource("Resource_lo4tm")

[node name="StartGameTarget" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.6603322)
script = ExtResource("2_7htnq")
tween_resource = SubResource("Resource_lo4tm")

[node name="Credit" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.1183076, 4.370536, 0.8252435)
script = ExtResource("2_7htnq")
tween_resource = SubResource("Resource_lo4tm")

[node name="CRT_Wider" parent="." instance=ExtResource("4_7htnq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.9740071)

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.0544978, -2.4268446)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.016540527, 0.10244751, 0)
shape = SubResource("BoxShape3D_3wf2c")

[node name="Area3D2" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.139153, 3.3125877, -2.4268446)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5103488, 1.5480528, 0)
shape = SubResource("BoxShape3D_3wf2c")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_8bi5o")

[node name="Picture Frame" parent="." instance=ExtResource("9_627k2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.355465, 2.9010878, -3.0406175)

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(2.6337276, 0, 0, 0, -4.371139e-08, -6.8647265, 0, 1, -3.0006672e-07, -0.76238346, 0.9427972, -3.1222687)
mesh = SubResource("PlaneMesh_627k2")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(2.6337276, 0, 0, 0, -4.371139e-08, -6.8647265, 0, 1, -3.0006672e-07, -5.9118433, 0.9427972, -3.1222687)
mesh = SubResource("PlaneMesh_627k2")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="."]
transform = Transform3D(2.6337276, 0, 0, 0, -4.371139e-08, -6.8647265, 0, 1, -3.0006672e-07, 4.3826857, 0.9427972, -3.1222687)
mesh = SubResource("PlaneMesh_627k2")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="."]
transform = Transform3D(2.6337276, 0, 0, 0, -4.371139e-08, -6.8647265, 0, 1, -3.0006672e-07, 9.6017685, 0.9427972, -3.1222687)
mesh = SubResource("PlaneMesh_627k2")

[node name="MeshInstance3D5" type="MeshInstance3D" parent="."]
transform = Transform3D(2.6337276, 0, 0, 0, -4.371139e-08, -6.8647265, 0, 1, -3.0006672e-07, 14.821376, 0.9427972, -3.1222687)
mesh = SubResource("PlaneMesh_627k2")

[node name="Table" parent="." instance=ExtResource("11_ms31j")]
transform = Transform3D(0.5808024, 0, -0.8140446, 0, 1, 0, 0.8140446, 0, 0.5808024, 0.55106926, -2.1464133, -1.9551272)

[connection signal="input_event" from="Area3D" to="." method="_on_start_input_event"]
[connection signal="input_event" from="Area3D2" to="." method="_on_credit_input_event"]
